fixed h2 align

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -58,7 +58,7 @@ h1{
   margin-right:20px;
 }
 h2{
-  text-align: right;
+  text-align: left;
   color: #F5F7DC;
   margin:20px;
 }
